--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -271,4 +271,6 @@
     <string name="connected">Connected</string>
     <string name="connect">Connect</string>
     <string name="report">Report</string>
+    <string name="todo">TODO</string>
+    <string name="select_all">Select All</string>
 </resources>
